--- a/ma2.html
+++ b/ma2.html
@@ -29,14 +29,14 @@ body{
 /* ===== Canvas ===== */
 .feed{
   width:min(1080px,96vw);
-  aspect-ratio:1/1;
+  aspect-ratio:4/5;            /* feed vertical */
   background:#fff;
   border-radius:28px;
   overflow:hidden;
   position:relative;
 }
 
-/* leve profundidade premium */
+/* profundidade premium leve */
 .feed::after{
   content:"";
   position:absolute;
@@ -50,10 +50,9 @@ body{
 .content{
   position:relative;
   height:100%;
-  padding:64px;
+  padding:64px 64px 48px;
   display:flex;
   flex-direction:column;
-  justify-content:space-between;
 }
 
 /* ===== Imagem IA ===== */
@@ -72,7 +71,7 @@ body{
 /* ===== Texto ===== */
 .text{
   text-align:center;
-  margin-top:-10px;
+  margin-top:-12px;
 }
 
 .text h1{
@@ -94,10 +93,23 @@ body{
   color:var(--muted);
 }
 
+/* ===== Logo inferior ===== */
+.footer-logo{
+  margin-top:36px;
+  display:flex;
+  justify-content:center;
+}
+
+.footer-logo img{
+  width:170px;
+  opacity:.95;
+}
+
 /* Mobile */
 @media(max-width:600px){
-  .content{padding:36px}
+  .content{padding:36px 26px 32px}
   .visual img{max-width:95%}
+  .footer-logo img{width:150px}
 }
 </style>
 </head>
@@ -120,6 +132,11 @@ body{
       <p>
         Atendimento 24h por dia sem escalar equipe.
       </p>
+    </div>
+
+    <!-- Logo centralizado embaixo -->
+    <div class="footer-logo">
+      <img src="assets/img/logoma.avif" alt="Mercado Agentes">
     </div>
 
   </div>
