--- a/ma2.html
+++ b/ma2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Feed 02 — Mercado Agentes</title>
+<title>Feed 02 — Mercado Agentes (Impacto)</title>
 
 <style>
 :root{
@@ -26,7 +26,7 @@ body{
   font-family:Inter, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-/* ===== Canvas ===== */
+/* ===== Canvas 4:5 ===== */
 .feed{
   width:min(1080px,96vw);
   aspect-ratio:4/5;
@@ -36,25 +36,26 @@ body{
   position:relative;
 }
 
-/* ===== Glows premium (NOVO) ===== */
+/* Glows premium */
 .feed::before{
   content:"";
   position:absolute;
-  inset:-10%;
+  inset:-12%;
   background:
-    radial-gradient(520px 260px at 50% 0%, rgba(37,99,235,.14), transparent 60%),
-    radial-gradient(420px 260px at 20% 35%, rgba(59,130,246,.12), transparent 62%),
-    radial-gradient(420px 260px at 80% 35%, rgba(34,211,238,.10), transparent 62%);
+    radial-gradient(560px 280px at 50% -2%, rgba(37,99,235,.18), transparent 62%),
+    radial-gradient(460px 280px at 18% 38%, rgba(59,130,246,.14), transparent 65%),
+    radial-gradient(460px 280px at 82% 36%, rgba(34,211,238,.12), transparent 65%),
+    radial-gradient(900px 500px at 50% 110%, rgba(15,23,42,.06), transparent 62%);
   pointer-events:none;
 }
 
-/* profundidade leve */
+/* vinheta/sombra mínima para “card premium” */
 .feed::after{
   content:"";
   position:absolute;
   inset:0;
   background:
-    linear-gradient(180deg, rgba(255,255,255,0), rgba(0,0,0,.04));
+    linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(15,23,42,.05) 100%);
   pointer-events:none;
 }
 
@@ -62,28 +63,47 @@ body{
 .content{
   position:relative;
   height:100%;
-  padding:56px 64px 48px; /* ↓ menos espaço geral */
+  padding:50px 64px 46px;
   display:flex;
   flex-direction:column;
+  z-index:1;
 }
 
-/* ===== Imagem IA ===== */
+/* ===== Visual ===== */
 .visual{
   flex:1;
   display:flex;
-  align-items:center;
+  align-items:flex-start;
   justify-content:center;
+  padding-top:10px;
+  position:relative;
 }
 
+/* imagem maior + responsiva */
 .visual img{
-  max-width:88%;
+  width:min(920px, 92%);
   height:auto;
+  display:block;
+
+  /* leve boost de “premium clarity” */
+  filter: saturate(1.04) contrast(1.02);
+}
+
+/* fade suave na base do visual (some no branco) */
+.visual::after{
+  content:"";
+  position:absolute;
+  left:0; right:0;
+  bottom:-10px;
+  height:170px;
+  background:linear-gradient(180deg, rgba(255,255,255,0), #fff 72%);
+  pointer-events:none;
 }
 
 /* ===== Texto ===== */
 .text{
   text-align:center;
-  margin-top:-28px; /* 🔥 sobe o bloco de texto */
+  margin-top:-42px;   /* sobe o texto perto do centro */
 }
 
 .text h1{
@@ -91,7 +111,7 @@ body{
   font-size:clamp(52px,5.2vw,72px);
   font-weight:900;
   letter-spacing:-0.03em;
-  line-height:1.08; /* 🔥 line-height menor */
+  line-height:1.06;   /* mais compacto */
   color:var(--ink);
 }
 
@@ -102,13 +122,13 @@ body{
 .text p{
   margin-top:12px;
   font-size:clamp(22px,2vw,26px);
-  font-weight:600;
+  font-weight:650;
   color:var(--muted);
 }
 
 /* ===== Logo inferior ===== */
 .footer-logo{
-  margin-top:22px; /* 🔥 aproxima mais do centro */
+  margin-top:18px;
   display:flex;
   justify-content:center;
 }
@@ -120,9 +140,9 @@ body{
 
 /* Mobile */
 @media(max-width:600px){
-  .content{padding:40px 26px 36px}
-  .visual img{max-width:95%}
-  .text{margin-top:-20px}
+  .content{padding:36px 26px 34px}
+  .text{margin-top:-26px}
+  .footer-logo img{width:150px}
 }
 </style>
 </head>
@@ -132,22 +152,16 @@ body{
 <section class="feed">
   <div class="content">
 
-    <!-- Visual IA -->
     <div class="visual">
+      <!-- troque para o nome exato do novo arquivo -->
       <img src="assets/img/img11.png" alt="Agente de IA conectado a múltiplas conversas">
     </div>
 
-    <!-- Texto -->
     <div class="text">
-      <h1>
-        Um agente. <span>Centenas de conversas.</span>
-      </h1>
-      <p>
-        Atendimento 24h por dia sem escalar equipe.
-      </p>
+      <h1>Um agente. <span>Centenas de conversas.</span></h1>
+      <p>Atendimento 24h por dia sem escalar equipe.</p>
     </div>
 
-    <!-- Logo -->
     <div class="footer-logo">
       <img src="assets/img/logoma.avif" alt="Mercado Agentes">
     </div>
