--- a/aistudio.html
+++ b/aistudio.html
@@ -513,6 +513,143 @@
     </div>
   </div>
 </section>
+<!-- PLANOS AI STUDIO -->
+<section class="cta-section" id="planos">
+  <div class="container">
+
+    <header class="section__header">
+      <h2 class="section__title">
+        Planos pensados para <span class="gradient-text">implantar IA de verdade</span>
+      </h2>
+      <p class="section__subtitle">
+        Do primeiro atendimento automatizado até uma operação estratégica com múltiplos fluxos no WhatsApp.
+      </p>
+    </header>
+
+    <!-- GRID DE PLANOS -->
+    <div class="cards-grid" style="
+      grid-template-columns: repeat(3, 1fr);
+      gap: 18px;
+    ">
+
+      <!-- ESSENCIAL -->
+      <div class="card-base" style="
+        background: linear-gradient(180deg, rgba(255,255,255,0.08), rgba(255,255,255,0.02));
+        border: 1px solid rgba(255,255,255,0.18);
+      ">
+        <span class="tag">Essencial</span>
+
+        <h1 class="hero__title" style="font-size: 2.2rem; margin: .75rem 0;">
+          R$ 297<span style="font-size:.9rem; opacity:.7;">/mês</span>
+        </h1>
+
+        <p class="muted">
+          Ideal para automatizar o atendimento principal do negócio.
+        </p>
+
+        <ul class="agent-card__bullets">
+          <li>1 Agente de IA</li>
+          <li>1 WhatsApp conectado</li>
+          <li>Até 5 usuários da equipe<br><small>(1 admin + até 4 funcionários)</small></li>
+          <li>Plataforma de gestão completa (CRM)</li>
+          <li>Chat estilo WhatsApp Web</li>
+          <li>Suporte via chat</li>
+          <li>Acompanhamento de atendimento</li>
+        </ul>
+
+        <a
+          href="https://wa.me/5511959029428?text=Quero%20contratar%20o%20plano%20Essencial%20do%20AI%20Studio."
+          class="btn btn--outline btn--large"
+          target="_blank"
+        >
+          Iniciar com Essencial
+        </a>
+      </div>
+
+      <!-- CRESCIMENTO -->
+      <div class="card-base" style="
+        background: linear-gradient(180deg, rgba(0,140,255,0.18), rgba(0,140,255,0.06));
+        border: 1px solid rgba(0,140,255,0.35);
+        box-shadow: 0 20px 50px rgba(0,140,255,0.18);
+      ">
+        <span class="tag tag--ai">Crescimento</span>
+
+        <h1 class="hero__title" style="font-size: 2.2rem; margin: .75rem 0;">
+          R$ 497<span style="font-size:.9rem; opacity:.8;">/mês</span>
+        </h1>
+
+        <p class="muted">
+          Para empresas com mais de um fluxo ou objetivo de atendimento.
+        </p>
+
+        <ul class="agent-card__bullets">
+          <li>2 Agentes de IA</li>
+          <li>2 WhatsApps conectados</li>
+          <li>Até 5 usuários da equipe<br><small>(1 admin + até 4 funcionários)</small></li>
+          <li>Plataforma de gestão completa (CRM)</li>
+          <li>Chat estilo WhatsApp Web</li>
+          <li>Suporte via chat</li>
+          <li>Acompanhamento consultivo de atendimento</li>
+        </ul>
+
+        <a
+          href="https://wa.me/5511959029428?text=Quero%20contratar%20o%20plano%20Crescimento%20do%20AI%20Studio."
+          class="btn btn--primary btn--large"
+          target="_blank"
+        >
+          Contratar Crescimento
+        </a>
+      </div>
+
+      <!-- ESTRATÉGICO -->
+      <div class="card-base" style="
+        background: linear-gradient(180deg, rgba(0,200,255,0.28), rgba(0,200,255,0.12));
+        border: 1px solid rgba(0,200,255,0.45);
+        box-shadow: 0 25px 70px rgba(0,200,255,0.25);
+      ">
+        <span class="tag tag--ai">Estratégico</span>
+
+        <h1 class="hero__title" style="font-size: 2.4rem; margin: .75rem 0;">
+          R$ 897<span style="font-size:.9rem; opacity:.85;">/mês</span>
+        </h1>
+
+        <p class="muted">
+          Atendimento automatizado + crescimento orientado a resultado.
+        </p>
+
+        <ul class="agent-card__bullets">
+          <li>3 Agentes de IA ou mais</li>
+          <li>3 WhatsApps conectados ou mais</li>
+          <li>Até 5 usuários da equipe<br><small>(1 admin + até 4 funcionários)</small></li>
+          <li>Plataforma de gestão completa (CRM)</li>
+          <li>Chat estilo WhatsApp Web</li>
+          <li>Suporte prioritário</li>
+          <li>Acompanhamento estratégico contínuo</li>
+          <li>Parceiro de marketing integrado ao atendimento</li>
+        </ul>
+
+        <a
+          href="https://wa.me/5511959029428?text=Quero%20contratar%20o%20plano%20Estratégico%20do%20AI%20Studio."
+          class="btn btn--primary btn--large"
+          target="_blank"
+        >
+          Falar sobre o Estratégico
+        </a>
+      </div>
+
+    </div>
+
+  </div>
+</section>
+
+<!-- MOBILE: 1 plano por linha -->
+<style>
+@media (max-width: 768px){
+  #planos .cards-grid{
+    grid-template-columns: 1fr !important;
+  }
+}
+</style>
 
 <!-- PLANETS GRID -->
 <section class="agents" id="agentes">
